# dsgen

./: .gitignore  README.md  TODO  TODO.txt  build-linux  dsgen.cabal
res/cards/: alchemy.txt  cornucopia.txt  custom.txt  darkAges.txt  dominion.txt  guilds.txt  hinterlands.txt  intrigue.txt  promos.txt  prosperity.txt  seaside.txt
res/conf/: alchemyCards.txt  cornucopiaCards.txt  dominionCards.txt  intrigueCards.txt  prosperityCards.txt  seasideCards.txt
res/gui/: gui.glade
src/: Main.hs
src/Dsgen/: Cards.hs  ChecklistDialog.hs  GUIState.hs  Main.hs  MainGUI.hs  SetGen.hs  SetSelect.hs
src/Dsgen/SetSelect/: Internals.hs
testsuite/: RunTests.hs
testsuite/Dsgen/: TestCards.hs  TestHelpers.hs  TestSetSelect.hs
util/: runtests.sh
