name:                dsgen
version:             0.1.0.0
synopsis:            A utility for generating randomized kingdom card sets for the board game Dominion.
-- description:         
homepage:            http://pshendry.com/dsgen/
license:             GPL-3
license-file:        LICENSE
author:              Paul Hendry
maintainer:          paulshendry@gmail.com
copyright:           Copyright © 2013 Paul Hendry.
category:            Utility
build-type:          Simple
cabal-version:       >=1.8
data-files:          res/gui/gui.glade

executable dsgen
  build-depends:       base ==4.6.*,
                       containers ==0.5.*,
                       gtk3 ==0.12.*,
                       mtl ==2.*,
                       ConfigFile ==1.*
  main-is:             Main.hs
  hs-source-dirs:      src
  -- other-modules:       
